assets/sheets/projects.css
html,body,div,span,applet,object,
iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,
address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,
strike,sub,sup,tt,var,center,dl,dt,dd,ol,ul,li,fieldset,form,
label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,
aside,canvas,details,embed,figure,figcaption,footer,header,
hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,
video { 
  border: 0; 
  font-size: 100%; 
  font: inherit; 
  vertical-align: 
  baseline; 
  margin: 0; 
  padding: 0; }

html { 
  font-size: 62.5%; 
}

body { 
  font-size: 1em; 
  background: #F5F5F5; 
  font-family: 'Dosis', sans-serif; 
  color: #565659; 
  background-color: #f6f3ee;
  width: 99%;
}

main {
  display: block; 
  margin: 80px auto; 
  padding: 0 20px; 
  text-align: center;
}

h1 {
  font-size: 70px; 
  font-family: 'Fredoka One', cursive; 
  text-align: center; 
  color: #5a5243;
}

h1 sup {
  font-size: 14px; 
  margin-left: -20px; 
  display: inline-block; 
  line-height: 1;
}

h2 {
  font-size: 22px; 
  text-align: center; 
  margin: -7px 0 80px 0; 
  padding: 5px 5px 6px 5px; 
  display: inline-block; 
  line-height: 30px;
  border-bottom: 1px solid #5a5243; 
  border-top: 1px solid #5a5243;
}

.tabButton {
  font-size: 15px; 
  font-weight: bold; 
  padding: 15px 20px; 
}

.tab {
  padding: 20px; 
  text-align: left;
}

h3 {
  font-size: 20px; font-weight: bold;
}

p {
  font-size: 15px; margin-top: 10px; 
}

@media screen and (min-width: 768px) {
  main {
    width: 700px;
  }
}

.thumbnail {
    position: relative;
    zoom: normal;
    transform: none;
    transform-origin: 0 0;
    -ms-zoom: 0.25;
    -moz-transform: scale(0.25);
    -moz-transform-origin: 0 0;
    -o-transform: scale(0.25);
    -o-transform-origin: 0 0;
    -webkit-transform: scale(0.25);
    -webkit-transform-origin: 0 0;
}
.thumbnail:after {
    content: "";
    display: block;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
}
.thumbnail iframe {
    width: 1440px;
    height: 900px;
}
.thumbnail-container {
    width: calc(1440px * 0.25);
    height: calc(900px * 0.25);
    display: inline-block;
    overflow: hidden;
    position: relative;
}
.project {
    display: flex;
    width: 100%;
}

.left-column {
    float: left;
    width: 39%;
}
.right-column {
    float: right;
    width: 59%;

}
.tab-wrap {
    -webkit-transition: 0.3s box-shadow ease;
    transition: 0.3s box-shadow ease;
    border-radius: 6px;
    max-width: 100%;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    position: relative;
    list-style: none;
    background-color: #fff;
    margin: 40px 0;
    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
  }
  
  .tab-wrap:hover { box-shadow: 0 12px 23px rgba(0, 0, 0, 0.23), 0 10px 10px rgba(0, 0, 0, 0.19); }
  
  .tab { display: none; }
  
  .tab:checked:nth-of-type(1) ~ .tab__content:nth-of-type(1) {
    opacity: 1;
    -webkit-transition: 0.5s opacity ease-in, 0.2s transform ease;
    transition: 0.5s opacity ease-in, 0.2s transform ease;
    position: relative;
    top: 0;
    z-index: 100;
    -webkit-transform: translateY(0px);
    transform: translateY(0px);
    text-shadow: 0 0 0;
  }
  
  .tab:checked:nth-of-type(2) ~ .tab__content:nth-of-type(1) {
    opacity: 1;
    -webkit-transition: 0.5s opacity ease-in, 0.2s transform ease;
    transition: 0.5s opacity ease-in, 0.2s transform ease;
    position: relative;
    top: 0;
    z-index: 100;
    -webkit-transform: translateY(0px);
    transform: translateY(0px);
    text-shadow: 0 0 0;
  }
  
  .tab:checked:nth-of-type(3) ~ .tab__content:nth-of-type(1) {
    opacity: 1;
    -webkit-transition: 0.5s opacity ease-in, 0.2s transform ease;
    transition: 0.5s opacity ease-in, 0.2s transform ease;
    position: relative;
    top: 0;
    z-index: 100;
    -webkit-transform: translateY(0px);
    transform: translateY(0px);
    text-shadow: 0 0 0;
  }
  
   .tab:first-of-type:not(:last-of-type) + label {
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
  }
  
  .tab:not(:first-of-type):not(:last-of-type) + label { border-radius: 0; }
  
  .tab:last-of-type:not(:first-of-type) + label {
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
  }
  
  .tab:checked + label {
    background-color: #fff;
    box-shadow: 0 -1px 0 #fff inset;
    cursor: default;
  }
  
  .tab:checked + label:hover {
    box-shadow: 0 -1px 0 #fff inset;
    background-color: #fff;
  }
  
  .tab + label {
    width: 100%;
    box-shadow: 0 -1px 0 #eee inset;
    border-radius: 6px 6px 0 0;
    cursor: pointer;
    display: block;
    text-decoration: none;
    color: #333;
    -webkit-box-flex: 3;
    -webkit-flex-grow: 3;
    -ms-flex-positive: 3;
    flex-grow: 3;
    text-align: center;
    background-color: #f2f2f2;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    text-align: center;
    -webkit-transition: 0.3s background-color ease, 0.3s box-shadow ease;
    transition: 0.3s background-color ease, 0.3s box-shadow ease;
    height: 50px;
    box-sizing: border-box;
    padding: 15px;
  }
  @media (min-width:768px) {
  
  .tab + label { width: auto; }
  }
  
  .tab + label:hover {
    background-color: #f9f9f9;
    box-shadow: 0 1px 0 #f4f4f4 inset;
  }
  
  .tab__content {
    padding: 10px 25px;
    background-color: transparent;
    position: absolute;
    width: 100%;
    z-index: -1;
    opacity: 0;
    left: 0;
    -webkit-transform: translateY(-3px);
    transform: translateY(-3px);
    border-radius: 6px;
  }
  
  /* Boring Styles */
  
  *, *:before, *:after {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
  }
  
  body {
    font-family: sans-serif;
    background-color: #e7e7e7;
    color: #777;
    min-width: 350px;
  }
  
  h1, h2 {
    margin: 0;
    color: #444;
    text-align: center;
  }
  
  h2 {
    font-size: 1em;
    margin-bottom: 30px;
  }
  
  #div {
    line-height: 1.6;
    margin-bottom: 20px;
  }
  
  .container {
    max-width: 1150px;
    margin: 20px auto;
  }

  @-webkit-keyframes showTab {
    from {
        opacity:0;
        -webkit-transform:translateY(10px);
        transform:translateY(10px)
    } to {
        opacity:1;
        -webkit-transform:translateY(0);
        transform:translateY(0)
    }
}

@keyframes showTab {
    from {
        opacity:0;
        -webkit-transform:translateY(10px);
        transform:translateY(10px)
    } to {
        opacity:1;
        -webkit-transform:translateY(0);
        transform:translateY(0)
    }
}

.tabsy > button {
    width:100%;
    font-family:inherit;
    font-size:100%;
    margin:0;
    outline:0;
    border:0;
    vertical-align:baseline;
    -webkit-box-sizing:border-box;
    box-sizing:border-box;
    background:transparent
}

.tabsy > .tabButton {
    display:block;
    margin-top:1px;
    background:#5a5243;
    color:#f5f5f5;
    text-align:center;
    -webkit-transition:all 250ms ease-in-out;
    transition:all 250ms ease-in-out
}

.tabsy>input { 
    display:none
}

.tabsy > input:checked+label+.tab {
    display:block
}

.tabsy > input:checked+label+.tab>.content {
    -webkit-animation:showTab 250ms ease-in-out;
    animation:showTab 250ms ease-in-out
} 
.tabsy>.tab {
    background:#fff;
    display:none
}

@media screen and (min-width: 768px) {
    .tabsy { 
        display:-webkit-box;
        display:-webkit-flex;
        display:-ms-flexbox;
        display:flex;
        -webkit-flex-wrap:wrap;
        -ms-flex-wrap:wrap;
        flex-wrap:wrap
    }
    
    .tabsy>.tabButton {
        -webkit-box-ordinal-group:2;
        -webkit-order:1;
        -ms-flex-order:1;
        order:1;
        -webkit-box-align:start;
        -webkit-align-items:flex-start;
        -ms-flex-align:start;
        align-items:flex-start;
        cursor:pointer
    }
    
    .tabsy>input:checked+label {
        background:#fff;
        color:#5a5243
    } 
    
    .tabsy>.tab {
        -webkit-box-ordinal-group:3;
        -webkit-order:2;
        -ms-flex-order:2;
        order:2
    }
}

